--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "dependencies": {
         "alchemy-sdk": "^2.6.2",
         "csv-parse": "^5.1.0",
+        "dotenv": "^16.0.3",
         "ethers": "^5.6.9",
         "papaparse": "^5.3.2",
         "web3": "^1.7.0"
