--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
         "alchemy-sdk": "^2.6.2",
         "csv-parse": "^5.1.0",
         "dotenv": "^16.0.3",
-        "ethers": "^5.6.9",
+        "ethers": "^6.7.1",
+        "hardhat": "^2.19.2",
         "papaparse": "^5.3.2",
         "web3": "^1.7.0"
+    },
+    "devDependencies": {
+        "@nomicfoundation/hardhat-toolbox": "^4.0.0"
     }
 }
